...
//  Created by Ranjan, Kumar sahu (K.) on 23/01/18.
//  Copyright © 2018 Ford Motor Company. All rights reserved.
//

import Foundation

public var errorMsg: String = "Error"
public var preRecordTrace: String = "Pre-recorded tracefile"
public var wifiNotConnected: String = "WIFI not connected."
public var errorMsgBLE: String = "BLE is not connected to the device. "
public var errorMsgCustomCommand: String = "It is not a valid json. "
public var errorMsgText: String = "You need to enter the value. "
public var errorMsgCustomCommandProto: String = "Custom Command is not available for Protobuf mode."
...
